--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	
@@ -267,7 +269,94 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 justify-content-center counter-wrap ftco-animate">
+
+				<section class="ftco-section ftco-project" id="galeri-section">
+					<div class="container-fluid px-md-4">
+						<div class="row justify-content-center pb-5">
+							<div class="col-md-12 heading-section text-center ftco-animate">
+								<span class="subheading">CATRASTRO</span>
+								<h2 class="mb-4">TRABAJOS REALIZADOS</h2>
+								<!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-3">
+								<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.jpg);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<span>Web Design</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<span>Web Design</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.jpg);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<span>Web Design</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<span>Web Design</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-5.jpg);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<span>Web Design</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<span>Web Design</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-7.jpg);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<span>Web Design</span>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-8.jpg);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<span>Web Design</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!------------------------------------------------------------------------------->
+				<!--<div class="col-md-3 justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 d-flex">
 						<div class="icon d-flex justify-content-center align-items-center">
 							<span class="flaticon-coffee"></span>
@@ -277,7 +366,7 @@
 							<span>Valuación catastral</span>
 						</div>
 					</div>
-				</div>
+				</div>	
 				<div class="col-md-3 justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 d-flex">
 						<div class="icon d-flex justify-content-center align-items-center">
@@ -310,93 +399,7 @@
 							<span>Aplicación de tablas de valores unitarios, formuladas por el Gobierno Estatal y los Municipios</span>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section ftco-project" id="galeri-section">
-		<div class="container-fluid px-md-4">
-			<div class="row justify-content-center pb-5">
-				<div class="col-md-12 heading-section text-center ftco-animate">
-					<span class="subheading">CATRASTRO</span>
-					<h2 class="mb-4">TRABAJOS REALIZADOS</h2>
-					<!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-5.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-7.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-8.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</section>
@@ -774,7 +777,7 @@
 		</div>
 	</section>
 	
-	<section class="ftco-hireme">
+	<!--<section class="ftco-hireme">
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-md-8 col-lg-8 d-flex align-items-center">
@@ -882,7 +885,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 
 	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
 		<div class="container">
@@ -890,44 +893,20 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<span class="subheading">CHIMALHUACAN</span>
 					<h2 class="mb-4">CONTACTANOS</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>Nos encontramos en el centro de chimalhuacan</p>
 				</div>
 			</div>
+			<!-----google maps-------->
+
+			</script>
 
 			<div class="row block-9">
-				<div class="col-md-8">
-					<!--<form action="#" class="bg-light p-4 p-md-5 contact-form">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Name">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Email">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Subject">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-								</div>
-							</div>
-						</div>
-					</form>-->
+				<div class="col-md-7.0">
+					<form action="#" class="bg-light p-4 p-md-2 contact-form">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4474.797568425066!2d-98.94461524767739!3d19.419264595414813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e311c0a60e4f%3A0x7d87e8791a45d465!2sDirecci%C3%B3n%20de%20Catastro%20Municipal!5e0!3m2!1ses!2smx!4v1717712723109!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					</form>
 					
 				</div>
-
 				<div class="col-md-4 d-flex pl-md-5">
 					<div class="row">
 						<div class="dbox w-100 d-flex">
